# sp4e_homeworks_jacopo_thibault

./: .gitignore  .gitmodules  README.md
Homework1/: GMRES.py  README.md  optimizer.py
Homework2/: CMakeLists.txt  README.md
Homework2/src/: CMakeLists.txt  RiemannIntegral.cc  RiemannIntegral.hh  computeArithmetic.cc  computeArithmetic.hh  computePi.cc  computePi.hh  dumperSeries.cc  dumperSeries.hh  main.cc  plotData.py  printSeries.cc  printSeries.hh  riemannIntegral.cc  riemannIntegral.hh  series.cc  series.hh  writeSeries.cc  writeSeries.hh
Homework3/: README.md
Homework3/src/: CMakeLists.txt  computeFftFreq.py  compute_temperature.cc  compute_temperature.hh  fft.hh  generate_heat_distribution.py  material_point.cc  material_points_factory.cc  requirement.txt  test_fft.cc  test_temperature.cc
Homework4/: README.md
Homework4/src/: CMakeLists.txt  main.py  pypart.cc  requirement.txt  visualization.ipynb
Homework4/src/trajectories/: step-0000.csv
